# cybersentinel-

./: .gitignore  Dockerfile  README.md  app.py  cybersentinel_env.py  deploy_to_hf.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py
server/: app.py
