[project]
name = "cybersentinel"
version = "1.0.0"
description = "An OpenEnv threat-intelligence triage environment for AI agents."
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
